crates/solidity/testing/snapshots/bindings_output/expressions/emit_named_args/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:8:17]
   │
 8 │         emit Log({level: 1, name: "Testing"});
   │                 ──────────────┬──────────────  
   │                               ╰──────────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 1
 2 │     event Log(
   │           ─┬─  
   │            ╰─── def: 2
 3 │         string name,
   │                ──┬─  
   │                  ╰─── def: 3
 4 │         uint level
   │              ──┬──  
   │                ╰──── def: 4
   │ 
 7 │     function test() public {
   │              ──┬─  
   │                ╰─── def: 5
 8 │         emit Log({level: 1, name: "Testing"});
   │         ──┬─ ─┬─  
   │           ╰─────── unresolved
   │               │   
   │               ╰─── def: 6
───╯
